# a2a-examples

./: .gitignore  Procfile  create_file.go  main.py  pyproject.toml  random_name_generator.py  random_number.py  read_file.py  run.sh  script_ecriture_fichier.py  uuid_generator.go
agents/: architect.py  developer.py  orchestrator.py  otel.py  reviewer.py
